Add eslint & git ignore file

--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/amtins/fuzzy-palm-tree/issues"
   },
-  "homepage": "https://github.com/amtins/fuzzy-palm-tree#readme"
+  "homepage": "https://github.com/amtins/fuzzy-palm-tree#readme",
+  "devDependencies": {
+    "eslint": "^5.14.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0"
+  }
 }
