--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Fuzzy palm tree",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "silent-linter": "eslint --ext .js ./;exit 0",
+    "linter": "eslint --ext .js ./"   
   },
   "repository": {
     "type": "git",
