--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "silent-linter": "eslint --ext .js ./;exit 0",
-    "linter": "eslint --ext .js ./"   
+    "linter": "eslint --ext .js ./",
+    "preversion": "npm run linter" 
   },
   "repository": {
     "type": "git",
