--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:ok": "echo \"No error: test ok\" && exit 0",
     "silent-linter": "eslint --ext .js ./;exit 0",
     "linter": "eslint --ext .js ./",
     "linter:fix": "eslint --fix --ext .js ./",
