--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint:fix": "eslint --fix --ext .js ./",
     "git": "git push --all origin",
     "git:tags": "git push --all tags",
-    "git:merge": "git branch -f master develop",
+    "git:merge": "git branch -f develop master",
     "postversion": "npm run git:merge && git push --all origin",
     "pretest": "npm install",
     "preversion": "npm run test",
