--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "git": "git push --all origin",
     "git:tags": "git push --all tags",
     "git:merge": "git branch -f develop master",
-    "postversion": "npm run git:merge && npm run git",
+    "postversion": "npm run git:merge && git:tags && npm run git",
     "pretest": "npm install",
     "preversion": "npm run test",
     "silent-linter": "eslint --ext .js ./;exit 0",
